crates/redoubt-zero/derive/src/tests/snapshots/redoubt_zero_derive__tests__expand__find_root_with_candidates.snap
---
source: crates/redoubt-zero/derive/src/tests/expand.rs
expression: pretty(ts_1)
---
compile_error!(
    "RedoubtZero: could not find redoubt-zero or redoubt-zero-core. Add redoubt-zero to Cargo.toml."
);
