crates/redoubt-zero/derive/src/tests/snapshots/redoubt_zero_derive__tests__expand__snapshot_empty_struct_ok.snap
---
source: crates/redoubt-zero/derive/src/tests/expand.rs
expression: expanded(derive_input)?
---
unsafe impl redoubt_zero_core::ZeroizeMetadata for Epsilon {
    const CAN_BE_BULK_ZEROIZED: bool = false;
}
impl redoubt_zero_core::FastZeroizable for Epsilon {
    fn fast_zeroize(&mut self) {
        let fields: [&mut dyn redoubt_zero_core::FastZeroizable; 1] = [
            redoubt_zero_core::collections::to_fast_zeroizable_dyn_mut(
                &mut self.__sentinel,
            ),
        ];
        redoubt_zero_core::collections::zeroize_collection(&mut fields.into_iter())
    }
}
impl redoubt_zero_core::ZeroizationProbe for Epsilon {
    fn is_zeroized(&self) -> bool {
        let fields: [&dyn redoubt_zero_core::ZeroizationProbe; 0] = [];
        redoubt_zero_core::collections::collection_zeroed(&mut fields.into_iter())
    }
}
impl redoubt_zero_core::AssertZeroizeOnDrop for Epsilon {
    fn clone_sentinel(&self) -> redoubt_zero_core::ZeroizeOnDropSentinel {
        self.__sentinel.clone()
    }
    fn assert_zeroize_on_drop(self) {
        redoubt_zero_core::assert::assert_zeroize_on_drop(self);
    }
}
