crates/redoubt-zero/derive/src/tests/snapshots/redoubt_zero_derive__tests__expand__snapshot_tuple_struct_ok.snap
---
source: crates/redoubt-zero/derive/src/tests/expand.rs
expression: expanded(derive_input)?
---
unsafe impl redoubt_zero_core::ZeroizeMetadata for Zeta {
    const CAN_BE_BULK_ZEROIZED: bool = false;
}
impl redoubt_zero_core::FastZeroizable for Zeta {
    fn fast_zeroize(&mut self) {
        let fields: [&mut dyn redoubt_zero_core::FastZeroizable; 4] = [
            redoubt_zero_core::collections::to_fast_zeroizable_dyn_mut(&mut self.0),
            redoubt_zero_core::collections::to_fast_zeroizable_dyn_mut(&mut self.1),
            redoubt_zero_core::collections::to_fast_zeroizable_dyn_mut(&mut self.2),
            redoubt_zero_core::collections::to_fast_zeroizable_dyn_mut(&mut self.3),
        ];
        redoubt_zero_core::collections::zeroize_collection(&mut fields.into_iter())
    }
}
impl redoubt_zero_core::ZeroizationProbe for Zeta {
    fn is_zeroized(&self) -> bool {
        let fields: [&dyn redoubt_zero_core::ZeroizationProbe; 3] = [
            redoubt_zero_core::collections::to_zeroization_probe_dyn_ref(&self.0),
            redoubt_zero_core::collections::to_zeroization_probe_dyn_ref(&self.1),
            redoubt_zero_core::collections::to_zeroization_probe_dyn_ref(&self.2),
        ];
        redoubt_zero_core::collections::collection_zeroed(&mut fields.into_iter())
    }
}
impl redoubt_zero_core::AssertZeroizeOnDrop for Zeta {
    fn clone_sentinel(&self) -> redoubt_zero_core::ZeroizeOnDropSentinel {
        self.3.clone()
    }
    fn assert_zeroize_on_drop(self) {
        redoubt_zero_core::assert::assert_zeroize_on_drop(self);
    }
}
